# csv-viewer

./: .gitignore  CLAUDE.md  README.md  generate_test_data.py  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci-frontend.yml  ci-rust.yml  release.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION.md  csv_viewer_implementation.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  types.rs
src-tauri/src/commands/: data.rs  file.rs  mod.rs  search.rs
src-tauri/src/csv/: delimiter.rs  encoding.rs  mod.rs
src/components/: EmptyState.tsx  ErrorBoundary.tsx  FileInfoBar.tsx  LoadingState.tsx  SearchBar.tsx  StatusBar.tsx  TitleBar.tsx  Toolbar.tsx
src/components/DataGrid/: DataGrid.tsx  datasource.ts
src/components/TabBar/: Tab.tsx  TabBar.tsx
src/hooks/: useDebounce.ts  useFileOpen.test.ts  useFileOpen.ts  useKeyboardShortcuts.ts  useSearch.test.ts  useSearch.ts
src/store/: appReducer.test.ts  appReducer.ts
src/types/: index.ts
test-data/: sjis_sample.csv  small.csv  tab_delimited.tsv
