[package]
name = "csv-viewer"
version = "0.1.0"
description = "A local CSV file viewer for macOS"
authors = ["PROXIT, Inc."]
edition = "2021"

[lib]
name = "csv_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
duckdb              = { version = "1", features = ["bundled"] }
encoding_rs         = "0.8"
chardetng           = "0.1"
thiserror           = "1.0"
uuid                = { version = "1.23", features = ["v4"] }
